website/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: website-deny-all-but-incoming-http
spec:
  endpointSelector:
    matchLabels:
      k8s:app: website
  ingress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  - {}
